objects/ingress/gpt-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: laptop-svc
      port:
        number: 80
  tls:
  - host: "a8375bdfbd727419a84886318aaf60e4-979a36593be7f291.elb.eu-west-3.amazonaws.com"
    secretName: ingress-tls  
  rules:
  - host: "a8375bdfbd727419a84886318aaf60e4-979a36593be7f291.elb.eu-west-3.amazonaws.com"
    http:
      paths:
      - path: /mobile
        pathType: Prefix
        backend:
          service:
            name: mobile-svc
            port:
              number: 80
      - path: /laptop
        pathType: Prefix
        backend:
          service:
            name: laptop-svc
            port:
              number: 80
