objects/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: laptop-svc
      port:
        number: 80
  rules:
    - host: "adea431c2c7c746f5b62febbde528567-806771054.eu-west-3.elb.amazonaws.com"
      http:
        paths:
        - path: /laptop
          pathType: Prefix
          backend:
            service:
              name: laptop-svc
              port:
                number: 80
        - path: /home
          pathType: Prefix
          backend:
            service:
              name: laptop-svc
              port:
                number: 80
